fill out comments

--- a/sarah-lab/index.html
+++ b/sarah-lab/index.html
@@ -85,8 +85,8 @@
     <script src="scripts/article.js"></script>
     <script src="scripts/articleView.js"></script>
     <script>
-    // COMMENT: What is this function doing? Why do we need it? Will we need one like it on the new article page that we are creating?
-    // PUT YOUR RESPONSE HERE
+    // DONE: What is this function doing? Why do we need it? Will we need one like it on the new article page that we are creating?
+    // Calling this function here populates the Handlebars templates with the data as specified in this function in articleView.js. Because articleView.js holds functions for both pages but populates the templates with different values for different pages, it has to be called here and not in the JS file.
       articleView.initIndexPage()
     </script>
   </body>
