--- a/sarah-lab/new.html
+++ b/sarah-lab/new.html
@@ -103,8 +103,8 @@
       // (Look at the bottom of index.html as a reference. Since we are now using our JS on two different HTML pages that have different needs as to what parts of the code they utilize, we need to build a function that inializes each page.)
       //  Hint: Look in articleView.js for a function that does this.
       articleView.initNewArticlePage()
-      // COMMENT: What is this function doing? Why do we need it?
-      // PUT YOUR RESPONSE HERE
+      // DONE: What is this function doing? Why do we need it?
+      // Calling this function here populates the Handlebars templates with the data as specified in this function in articleView.js. Because articleView.js holds functions for both pages but populates the templates with different values for different pages, it has to be called here and not in the JS file.
     </script>
   </body>
 </html>
